# tend-attend_fastapi

./: .flake8  .gitignore  LICENSE  README.md  compose.yml  docker-compose.yml  tend-attend-be.code-workspace
dev/: build.sh  deploy.sh  export-requirements.sh  poe-all  poe-all.sh  poetry-all  poetry-all.sh
docker/docker-entrypoint-initdb.d/: create-sequence-database.sql  create-shard-databases.sql  create-test-common-db.sql  create-test-sequence-db.sql  create-test-shard-dbs.sql
docker/lambda-server/: Dockerfile
docker/mysql/conf.d/: my.cnf
docker/server/: Dockerfile
scripts/: poetry-all.sh
ta-api/: main.py  pyproject.toml
ta-api/ta_api/: constants.py  dependencies.py
ta-api/ta_api/routers/: account.py  admin.py  auth.py  event.py  verify.py
ta-api/ta_api/routers/admin_router/: migration.py
ta-cli/: main.py  pyproject.toml
ta-cli/ta_cli/: utilities.py
ta-cli/ta_cli/typer/: db_migration.py
ta-cli/ta_cli/typers/: db_migration.py  db_mock.py
ta-core/: alembic.ini  pyproject.toml
ta-core/alembic/: env.py  script.py.mako
ta-core/alembic/versions/: 0a464d2315d1_v1_0_4.py  298817261445_v1_0_1.py  406b50422a66_v1_0_0.py  45db29753796_v1_0_2.py  4c15307f1702_v1_0_0.py  a3a32fc8cd0b_v1_0_3.py  aca799b8295a_v1_0_0.py  bf349d75896b_v1_0_0.py  e2266cfe8b8a_v1_0_1.py
ta-core/ta_core/: db.py  settings.py
ta-core/ta_core/aws/: aurora.py  test.py
ta-core/ta_core/constants/: constants.py  secrets.py
ta-core/ta_core/cryptography/: hash.py  jwt.py
ta-core/ta_core/db/: sharding.py
ta-core/ta_core/domain/entities/: account.py  auth.py  base.py  event.py  verify.py
ta-core/ta_core/domain/repositories/: base.py
ta-core/ta_core/dtos/: account.py  admin.py  auth.py  base.py  event.py  verify.py
ta-core/ta_core/dtos/admin_dto/: migration.py
ta-core/ta_core/error/: error_code.py
ta-core/ta_core/features/: account.py  auth.py  event.py
ta-core/ta_core/infrastructure/db/: settings.py  sharding.py  transaction.py
ta-core/ta_core/infrastructure/sqlalchemy/: db.py  migrate_db.py  unit_of_work.py
ta-core/ta_core/infrastructure/sqlalchemy/models/: base.py
ta-core/ta_core/infrastructure/sqlalchemy/models/commons/: __init__.py  account.py  auth.py  base.py  verify.py
ta-core/ta_core/infrastructure/sqlalchemy/models/sequences/: __init__.py  base.py  sequence.py
ta-core/ta_core/infrastructure/sqlalchemy/models/shards/: __init__.py  base.py  event.py  verify.py
ta-core/ta_core/infrastructure/sqlalchemy/repositories/: account.py  auth.py  base.py  event.py  verify.py
ta-core/ta_core/sqlalchemy/: db.py  migrate_db.py  settings.py
ta-core/ta_core/sqlalchemy/mapped_classes/: base.py
ta-core/ta_core/sqlalchemy/mapped_classes/commons/: common_base.py
ta-core/ta_core/sqlalchemy/mapped_classes/sequences/: sequence_base.py
ta-core/ta_core/sqlalchemy/mapped_classes/shards/: shard_base.py
ta-core/ta_core/use_case/: account.py  auth.py  develop.py  event.py  unit_of_work_base.py  verify.py
ta-core/ta_core/utils/: alembic.py  case_converter.py  datetime.py  rfc5545.py  rfc5545_parser.py  smtp.py  uuid.py
ta-core/tests/: conftest.py  db_settings.py  db_sharding.py  test_sharding.py
ta-core/tests/infrastructure/sqlalchemy/repositories/: test_account.py  test_event.py  test_verify.py
ta-core/tests/utils/: test_rfc5545.py  test_rfc5545_parser.py
ta-ml/: main.py  pyproject.toml
ta-ml/ta_ml/api/: timesfm.py
ta-ml/ta_ml/constants/: models.py  outliers.py  timesfm.py
ta-ml/ta_ml/evaluation/: attendance.py
ta-ml/ta_ml/forecast/: attendance.py
ta-ml/ta_ml/formatters/: attendance.py
ta-ml/ta_ml/models/: timesfm.py
ta-ml/ta_ml/outliers/: analysis.py  detection.py
ta-ml/ta_ml/utils/: auto_reg.py  metrics.py  stl.py
terraform/: README.md  main.tf  variables.tf
