[tool.poetry]
name = "ta-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
typer = {extras = ["all"], version = "^0.12.3"}
ta-core = {path = "../ta-core", develop = true}


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini ta_cli tests"
flake8 = "flake8 --config ../.flake8 ta_cli tests"
black = "black ta_cli tests"
isort = "isort ta_cli tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
