[tool.poetry]
name = "ta-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini ta_core tests"
flake8 = "flake8 --config ../.flake8 ta_core tests"
black = "black ta_core tests"
isort = "isort ta_core tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
