[tool.poetry]
name = "ta-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
pydantic = {extras = ["email"], version = "^2.8.2"}
pathlib = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.14.0"
aiomysql = "^0.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiosmtplib = "^3.0.2"
python-dotenv = "^1.0.1"
mysql-connector-python = "^8.4.0"
aws-advanced-python-wrapper = "^1.2.0"
uuid6 = "^2024.7.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
poethepoet = "^0.25.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mysql = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.poe.tasks]
mypy = "mypy --config-file ../mypy.ini ta_core alembic/env.py alembic/versions tests"
flake8 = "flake8 --config ../.flake8 ta_core alembic/env.py alembic/versions tests"
black = "black ta_core alembic/env.py alembic/versions tests"
isort = "isort ta_core alembic/env.py alembic/versions tests"
lint = ["mypy", "flake8"]
format = ["black", "isort"]
test = "pytest tests"
